[gd_scene load_steps=2 format=3 uid="uid://bi2fukxfut6qo"]

[ext_resource type="Script" path="res://addons/logic_graph/graph/graph.gd" id="1_inlnt"]

[node name="LogicGraph" type="GraphEdit"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
right_disconnects = true
snap_distance = 25
script = ExtResource("1_inlnt")

[connection signal="connection_request" from="." to="." method="_on_connection_request"]
[connection signal="delete_nodes_request" from="." to="." method="_on_delete_nodes_request"]
[connection signal="disconnection_request" from="." to="." method="_on_disconnection_request"]
